<resources>
    <string name="app_name">ScoreKeeper</string>
    <string name="sport1">Cricket</string>
    <string name="team1">Team 1</string>
    <string name="team2">Team 2</string>
    <string name="slash">/</string>
    <string name="wickets">0</string>
    <string name="runs">0</string>
    <string name="add1run">+1 run</string>
    <string name="add2runs">+2 runs</string>
    <string name="add3runs">+3 runs</string>
    <string name="add4runs">+4 runs</string>
    <string name="add6runs">+6 runs</string>
    <string name="wideball">Wide</string>
    <string name="wicket">Wicket</string>
    <string name="reset">Reset Score</string>
    
</resources>
