<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/teampadding"
                android:text="@string/team1"
                android:textSize="@dimen/teamsize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/scorebottompadding">

                <TextView
                    android:id="@+id/scoreteam1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runs"
                    android:textSize="56sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="56sp" />

                <TextView
                    android:id="@+id/wicketsteam1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wickets"
                    android:textSize="56sp" />

            </LinearLayout>

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addOneForTeam1"
                android:text="@string/add1run" />

            <Button

                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addTwoForTeam1"
                android:text="@string/add2runs" />

            <Button

                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addThreeForTeam1"
                android:text="@string/add3runs" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addFourForTeam1"
                android:text="@string/add4runs" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addSixForTeam1"
                android:text="@string/add6runs" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addOneForTeam1"
                android:text="@string/wideball" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addOneWicketForTeam1"
                android:text="@string/wicket" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="208dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="@dimen/teampadding"
                android:text="@string/team2"
                android:textSize="@dimen/teamsize"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/scorebottompadding">

                <TextView

                    android:id="@+id/scoreteam2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/runs"
                    android:textSize="56sp"

                    />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slash"
                    android:textSize="56sp" />

                <TextView
                    android:id="@+id/wicketsteam2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wickets"
                    android:textSize="56sp" />

            </LinearLayout>


            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addOneForTeam2"
                android:text="@string/add1run" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addTwoForTeam2"
                android:text="@string/add2runs" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addThreeForTeam2"
                android:text="@string/add3runs" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addFourForTeam2"
                android:text="@string/add4runs" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addSixForTeam2"
                android:text="@string/add6runs" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addOneForTeam2"
                android:text="@string/wideball" />

            <Button
                android:layout_width="@dimen/buttonwidth"
                android:layout_height="@dimen/buttonheight"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/buttonmarginbottom"
                android:onClick="addOneWicketForTeam2"
                android:text="@string/wicket" />
        </LinearLayout>
    </LinearLayout>

    <Button

        android:layout_width="@dimen/buttonwidth"
        android:layout_height="@dimen/buttonheight"
        android:layout_gravity="center"
        android:onClick="resetScore"
        android:text="@string/reset" />
</LinearLayout>

